syntax = "proto3";

option csharp_namespace = "GrpcExample";

package greet;

// 1. 單請求 / 單回應 (Unary)
service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// 2. 伺服端串流 (Server Streaming)
service NewsService {
  rpc GetNewsStream (NewsRequest) returns (stream NewsReply);
}

// 3. 用戶端串流 (Client Streaming)
service UploadService {
  rpc UploadFiles (stream FileChunk) returns (UploadResult);
}

// 4. 雙向串流 (Bidirectional Streaming)
service ChatService {
  rpc Chat (stream ChatMessage) returns (stream ChatMessage);
}

// Unary 範例
message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

// Server Streaming 範例
message NewsRequest {
  string category = 1;
}

message NewsReply {
  string title = 1;
  string content = 2;
}

// Client Streaming 範例
message FileChunk {
  string file_name = 1;
  bytes data = 2;
}

message UploadResult {
  bool success = 1;
  string message = 2;
}

// Bidirectional Streaming 範例
message ChatMessage {
  string user = 1;
  string text = 2;
  int64 timestamp = 3;
}